--- a/requirements/ci/requirements-oldest.txt
+++ b/requirements/ci/requirements-oldest.txt
@@ -8,10 +8,16 @@ aiosignal==1.4.0
     # via aiohttp
 alembic==1.17.2
     # via mlflow
+annotated-doc==0.0.4
+    # via fastapi
+annotated-types==0.7.0
+    # via pydantic
 antlr4-python3-runtime==4.9.3
     # via
     #   hydra-core
     #   omegaconf
+anyio==4.12.0
+    # via starlette
 appnope==0.1.4 ; sys_platform == 'darwin'
     # via
     #   ipykernel
@@ -42,6 +48,10 @@ bleach==6.3.0
     # via nbconvert
 blinker==1.9.0
     # via flask
+cachetools==5.5.2
+    # via
+    #   google-auth
+    #   mlflow-skinny
 certifi==2025.11.12
     # via requests
 cffi==2.0.0
@@ -55,11 +65,11 @@ charset-normalizer==3.4.4
     # via requests
 click==8.3.1
     # via
-    #   databricks-cli
     #   flask
-    #   mlflow
+    #   mlflow-skinny
+    #   uvicorn
 cloudpickle==3.1.2
-    # via mlflow
+    # via mlflow-skinny
 colorama==0.4.6
     # via
     #   click
@@ -82,8 +92,8 @@ cryptography==46.0.3 ; sys_platform == 'linux'
     # via secretstorage
 cycler==0.12.1
     # via matplotlib
-databricks-cli==0.18.0
-    # via mlflow
+databricks-sdk==0.73.0
+    # via mlflow-skinny
 datasets==4.0.0
     # via
     #   finetuning-scheduler (pyproject.toml)
@@ -110,10 +120,13 @@ docutils==0.22.3
 entrypoints==0.4
     # via
     #   jupyter-client
-    #   mlflow
     #   nbconvert
 evaluate==0.3.0
     # via finetuning-scheduler (pyproject.toml)
+exceptiongroup==1.3.1 ; python_full_version < '3.11'
+    # via anyio
+fastapi==0.123.9
+    # via mlflow-skinny
 filelock==3.20.0
     # via
     #   datasets
@@ -140,11 +153,23 @@ fsspec[http]==2025.3.0
 gitdb==4.0.12
     # via gitpython
 gitpython==3.1.45
+    # via mlflow-skinny
+google-auth==2.43.0
+    # via databricks-sdk
+graphene==3.4.3
     # via mlflow
+graphql-core==3.2.7
+    # via
+    #   graphene
+    #   graphql-relay
+graphql-relay==3.2.0
+    # via graphene
 greenlet==3.3.0 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'
     # via sqlalchemy
-gunicorn==21.2.0 ; sys_platform != 'win32'
+gunicorn==23.0.0 ; sys_platform != 'win32'
     # via mlflow
+h11==0.16.0
+    # via uvicorn
 hf-xet==1.2.0 ; platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'
     # via huggingface-hub
 huggingface-hub==0.36.0
@@ -158,12 +183,14 @@ identify==2.6.15
     # via pre-commit
 idna==3.11
     # via
+    #   anyio
     #   requests
     #   yarl
-importlib-metadata==7.2.1
+importlib-metadata==8.7.0
     # via
     #   keyring
-    #   mlflow
+    #   mlflow-skinny
+    #   opentelemetry-api
 importlib-resources==6.5.2
     # via typeshed-client
 iniconfig==2.3.0
@@ -203,7 +230,6 @@ jeepney==0.9.0 ; sys_platform == 'linux'
 jinja2==3.1.6
     # via
     #   flask
-    #   mlflow
     #   nbconvert
     #   notebook
     #   torch
@@ -246,8 +272,6 @@ lightning-utilities==0.15.2
     #   torchmetrics
 mako==1.3.10
     # via alembic
-markdown==3.10
-    # via mlflow
 markdown-it-py==0.6.2
     # via
     #   jupytext
@@ -268,10 +292,12 @@ mdit-py-plugins==0.2.6
     # via markdown-it-py
 mistune==0.8.4
     # via nbconvert
-mlflow==2.10.0
+mlflow==3.0.0
     # via
     #   finetuning-scheduler (pyproject.toml:dev)
     #   finetuning-scheduler (pyproject.toml:test)
+mlflow-skinny==3.0.0
+    # via mlflow
 more-itertools==10.8.0
     # via
     #   jaraco-classes
@@ -323,7 +349,7 @@ notebook==6.4.0
     # via
     #   finetuning-scheduler (pyproject.toml)
     #   widgetsnbextension
-numpy==1.26.4
+numpy==2.2.6 ; python_full_version < '3.11'
     # via
     #   contourpy
     #   datasets
@@ -331,7 +357,19 @@ numpy==1.26.4
     #   matplotlib
     #   mlflow
     #   pandas
-    #   pyarrow
+    #   scikit-learn
+    #   scipy
+    #   tensorboardx
+    #   torchmetrics
+    #   transformers
+numpy==2.3.5 ; python_full_version >= '3.11'
+    # via
+    #   contourpy
+    #   datasets
+    #   evaluate
+    #   matplotlib
+    #   mlflow
+    #   pandas
     #   scikit-learn
     #   scipy
     #   tensorboardx
@@ -372,13 +410,20 @@ nvidia-nvjitlink-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform 
     #   torch
 nvidia-nvtx-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'
     # via torch
-oauthlib==3.3.1
-    # via databricks-cli
 omegaconf==2.2.3
     # via
     #   finetuning-scheduler (pyproject.toml)
     #   hydra-core
-packaging==23.2
+opentelemetry-api==1.39.0
+    # via
+    #   mlflow-skinny
+    #   opentelemetry-sdk
+    #   opentelemetry-semantic-conventions
+opentelemetry-sdk==1.39.0
+    # via mlflow-skinny
+opentelemetry-semantic-conventions==0.60b0
+    # via opentelemetry-sdk
+packaging==25.0
     # via
     #   datasets
     #   evaluate
@@ -388,7 +433,7 @@ packaging==23.2
     #   lightning
     #   lightning-utilities
     #   matplotlib
-    #   mlflow
+    #   mlflow-skinny
     #   pytest
     #   pytorch-lightning
     #   tensorboardx
@@ -411,7 +456,7 @@ pillow==12.0.0
     # via matplotlib
 pkginfo==1.12.1.2
     # via twine
-platformdirs==4.5.0
+platformdirs==4.5.1
     # via virtualenv
 pluggy==1.6.0
     # via pytest
@@ -427,9 +472,10 @@ propcache==0.4.1
     # via
     #   aiohttp
     #   yarl
-protobuf==4.25.8
+protobuf==6.33.1
     # via
-    #   mlflow
+    #   databricks-sdk
+    #   mlflow-skinny
     #   tensorboardx
 psutil==5.9.0
     # via finetuning-scheduler (pyproject.toml)
@@ -439,20 +485,30 @@ ptyprocess==0.7.0 ; os_name != 'nt' or sys_platform != 'win32'
     #   terminado
 py==1.11.0
     # via pytest
-pyarrow==15.0.2
+pyarrow==20.0.0
     # via
     #   datasets
     #   mlflow
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.2
+    # via google-auth
 pycparser==2.23 ; implementation_name != 'PyPy'
     # via cffi
+pydantic==2.12.5
+    # via
+    #   fastapi
+    #   mlflow-skinny
+pydantic-core==2.41.5
+    # via pydantic
 pygments==2.19.2
     # via
     #   ipython
     #   nbconvert
     #   readme-renderer
     #   rich
-pyjwt==2.10.1
-    # via databricks-cli
 pyparsing==3.2.5
     # via matplotlib
 pyright==1.1.390
@@ -473,15 +529,14 @@ pytest-rerunfailures==10.2
     #   finetuning-scheduler (pyproject.toml:test)
 python-dateutil==2.9.0.post0
     # via
+    #   graphene
     #   jupyter-client
     #   matplotlib
     #   pandas
 pytorch-lightning==2.6.0
     # via lightning
-pytz==2023.4
-    # via
-    #   mlflow
-    #   pandas
+pytz==2025.2
+    # via pandas
 pywin32==311 ; sys_platform == 'win32'
     # via
     #   docker
@@ -498,7 +553,7 @@ pyyaml==6.0.3
     #   jsonargparse
     #   jupytext
     #   lightning
-    #   mlflow
+    #   mlflow-skinny
     #   omegaconf
     #   pre-commit
     #   pytorch-lightning
@@ -507,20 +562,18 @@ pyzmq==27.1.0
     # via
     #   jupyter-client
     #   notebook
-querystring-parser==1.2.4
-    # via mlflow
 readme-renderer==44.0
     # via twine
 regex==2025.11.3
     # via transformers
 requests==2.32.5
     # via
-    #   databricks-cli
+    #   databricks-sdk
     #   datasets
     #   docker
     #   evaluate
     #   huggingface-hub
-    #   mlflow
+    #   mlflow-skinny
     #   requests-toolbelt
     #   responses
     #   transformers
@@ -533,6 +586,8 @@ rfc3986==2.0.0
     # via twine
 rich==12.3.0
     # via finetuning-scheduler (pyproject.toml)
+rsa==4.9.1
+    # via google-auth
 scikit-learn==1.2.0
     # via
     #   finetuning-scheduler (pyproject.toml)
@@ -560,10 +615,8 @@ setuptools==80.9.0
     #   twine
 six==1.17.0
     # via
-    #   databricks-cli
     #   nbval
     #   python-dateutil
-    #   querystring-parser
 smmap==5.0.2
     # via gitdb
 sqlalchemy==2.0.44
@@ -571,13 +624,13 @@ sqlalchemy==2.0.44
     #   alembic
     #   mlflow
 sqlparse==0.5.4
-    # via mlflow
+    # via mlflow-skinny
+starlette==0.50.0
+    # via fastapi
 sympy==1.13.1
     # via torch
 tabulate==0.8.9
-    # via
-    #   finetuning-scheduler (pyproject.toml)
-    #   databricks-cli
+    # via finetuning-scheduler (pyproject.toml)
 tensorboardx==2.6.1
     # via finetuning-scheduler (pyproject.toml)
 terminado==0.18.1
@@ -648,28 +701,44 @@ typing-extensions==4.15.0
     # via
     #   aiosignal
     #   alembic
+    #   anyio
     #   cryptography
+    #   exceptiongroup
+    #   fastapi
+    #   graphene
     #   huggingface-hub
     #   lightning
     #   lightning-utilities
+    #   mlflow-skinny
     #   multidict
+    #   opentelemetry-api
+    #   opentelemetry-sdk
+    #   opentelemetry-semantic-conventions
+    #   pydantic
+    #   pydantic-core
     #   pyright
     #   pytorch-lightning
     #   sqlalchemy
+    #   starlette
     #   torch
     #   typeshed-client
+    #   typing-inspection
+    #   uvicorn
     #   virtualenv
+typing-inspection==0.4.2
+    # via pydantic
 tzdata==2025.2
     # via pandas
-urllib3==2.5.0
+urllib3==2.6.0
     # via
-    #   databricks-cli
     #   docker
     #   requests
     #   responses
+uvicorn==0.38.0
+    # via mlflow-skinny
 virtualenv==20.35.4
     # via pre-commit
-waitress==2.1.2 ; sys_platform == 'win32'
+waitress==3.0.2 ; sys_platform == 'win32'
     # via mlflow
 wcwidth==0.2.14
     # via prompt-toolkit
