--- a/requirements/ci/requirements-oldest.txt
+++ b/requirements/ci/requirements-oldest.txt
@@ -454,6 +454,8 @@ pickleshare==0.7.5
     # via ipython
 pillow==12.0.0
     # via matplotlib
+pip==21.0
+    # via finetuning-scheduler (pyproject.toml)
 pkginfo==1.12.1.2
     # via twine
 platformdirs==4.5.1
