Migrate CI and Build Infrastructure to UV (#22)
* bump lightning dev sha

* add expected warns for lightning 2.6/ PT 2.10 20251124

* fix for edge case lr lambda handling surfaced w/ PT 2.10

* feat(ci): Add uv-based CI infrastructure

Migrate to uv pip interface for CI builds with static dependency override
support. This establishes a simpler, reproducible CI workflow.

Changes:
- Add GitHub Copilot instructions (.github/copilot-instructions.md) with
  comprehensive repository context, build commands, and development
  guidelines
- Add static CI overrides file (requirements/ci/overrides.txt) for
  Lightning commit pinning, replacing dynamic generation approach
- Add locked CI requirements (requirements/ci/requirements.txt) generated
  via uv pip compile for reproducible builds
- Add lock script (requirements/utils/lock_ci_requirements.sh) wrapper
  around uv pip compile
- Add CI composite action (.github/actions/install-ci-dependencies) for
  unified uv-based installation
- Add process management wrapper (scripts/manage_standalone_processes.sh)
  to prevent duplicate test execution during coverage collection

The override file is used with `uv pip install --override` to pin
Lightning to a specific git commit during CI builds.

* refactor: simplify UV-based CI infrastructure

Simplify the CI dependency management by:

- Filter torch directly in requirements.txt during lock generation when
  nightly is configured, eliminating the need for requirements_no_torch.txt
- All installation paths now use requirements.txt directly
- Replace USE_CI_COMMIT_PIN env var with UV_OVERRIDE pointing to
  requirements/ci/overrides.txt for Lightning commit pinning
- Add torch-nightly.txt as centralized config for nightly torch version
- Move optional dependencies to pyproject.toml (cli, extra, examples, ipynb)
- Add dependency-groups for dev and test in pyproject.toml
- Update minimum Python to 3.10 (drop 3.9)
- Add requirements-oldest.txt lock file for Python 3.10 oldest deps

The tor

--- a/.github/workflows/ci_schema.yml
+++ b/.github/workflows/ci_schema.yml
@@ -11,12 +11,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install pkg
-        run: |
-          pip install check-jsonschema
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+          cache-dependency-glob: "requirements/**/*.txt"
+          version: "latest"
 
       - name: GH Workflows
-        run: check-jsonschema .github/workflows/*.yml --builtin-schema "github-workflows"
+        run: uvx check-jsonschema .github/workflows/*.yml --builtin-schema "github-workflows"
 
       # - name: Azure Pipelines
       #   env:
