initial copilot setup steps workflow, improved CI locked reqs logic, set pyright mode to standard and remove initial warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -203,9 +203,8 @@ exclude = ['tests/.*']
 # ignore_errors = "True"
 
 [tool.pyright]
-# Using "basic" mode for initial migration from mypy
-# TODO: Progressively tighten to "standard" as type issues are resolved
-typeCheckingMode = "basic"
+# Using "standard" mode for comprehensive type checking
+typeCheckingMode = "standard"
 include = ["src/finetuning_scheduler"]
 exclude = [
     "tests",
