fix pyright issues

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@ timit_data/
 grid_generated*
 grid_ori*
 
-
+# we don't have repo-specific prompts at this juncture
+.github/prompts/
 
 # C extensions
 *.so
