update CI scripts and fix docs
- Document strategy adapter entry points and add docs/usage guidance.
- Adjust CI/dependency matrix:
  - Remove `requirements/ci/torch-nightly.txt`.
  - Add `requirements/ci/torch-pre.txt`.
  - Update `requirements/ci/requirements.txt` and `requirements/ci/requirements-oldest.txt`.
  - Update `requirements/ci/torch_override.txt`.
  - Modify lock script and add `requirements/utils/sync_metadata.py`.
- Update build/test infrastructure and scripts:
  - Update `scripts/build_fts_env.sh`, `scripts/gen_fts_coverage.sh`, and `scripts/infra_utils.sh`.
  - Update Docker base image `dockers/base-cuda/Dockerfile`.
  - Update GitHub CI action `.github/actions/install-ci-dependencies/action.yml`.
- Core changes:
  - Update `src/finetuning_scheduler/dynamic_versioning/utils.py` (version/override handling).
  - Update `src/finetuning_scheduler/fts.py` (plugin discovery integration).

--- a/dockers/base-cuda/Dockerfile
+++ b/dockers/base-cuda/Dockerfile
@@ -81,13 +81,11 @@ RUN \
     else \
         # or target a specific cuda build, by specifying a particular index url w/...
         # ... default channel
-        # uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128; \
-        # ... pytorch patch version
-        # uv pip install torch==1.11.1+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
+        # uv pip install torch --torch-backend=cu128; \
         # ... pytorch nightly dev version
-        uv pip install --prerelease=allow torch==2.10.0.dev20251124 --index-url https://download.pytorch.org/whl/nightly/cu128; \
+        # uv pip install --prerelease=allow torch==2.10.0.dev20251124 --index-url https://download.pytorch.org/whl/nightly/cu128; \
         # ... test channel
-        # uv pip install --prerelease=allow torch==2.10.0 --index-url https://download.pytorch.org/whl/test/cu128; \
+        uv pip install --prerelease=allow torch==2.10.0 --index-url https://download.pytorch.org/whl/test/cu128; \
     fi && \
     # We avoid installing Lightning and other dependencies here as they are usually upgraded anyway later in
     # CI but we may re-enable in the future.
